--- a/src/assets/style/base.scss
+++ b/src/assets/style/base.scss
@@ -2,7 +2,7 @@
 @import "node_modules/material-components-web/material-components-web.scss";
 
 .body {
-  background-color: #558B2F;
+  background-color: #EFEBE9;
 }
 .site-content {
   display: flex;
