--- a/src/assets/style/colors.scss
+++ b/src/assets/style/colors.scss
@@ -22,3 +22,5 @@ $color-avatar-border:   $color-ebb;
 $color-light-text:      $color-white;
 $color-dark-text:       $color-black87;
 $color-subtle-text:     $color-black50;
+
+$color-footer-background: $color-white;
