--- a/src/assets/style/colors.scss
+++ b/src/assets/style/colors.scss
@@ -17,6 +17,7 @@ $color-toolbar-background: $color-black87;
 $color-card-background: $color-white;
 $color-entry-dates:     $color-white;
 $color-avatar-border:   $color-ebb;
+$color-divider:         $color-ebb;
 
 /* Typography */
 $color-light-text:      $color-white;
